--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 <body>
   <!-- Custom element HTML -->
   <div class="selector">
-    <div style="height: 10px; float: right;">powered by <img class="logo" style="height: 40px;" src="src/bynder_logo.png"
-        alt="Bynder logo" title="Bynder logo" /></div>
     <button class="btn btn--tertiary" onclick="javascript:openCompactView()">pick from assets</button>    
   </div>
-  <div class="spacer"></div>
   <div class="selected"></div>
   <script src="src/bynder-selector.js"></script>
+  <div class="disabled-powered">
+    <div style="height: 10px; float: right;">powered by <img class="logo" style="height: 40px;" src="src/bynder_logo.png"
+        alt="Bynder logo" title="Bynder logo" /></div>
+  </div>
 </body>
 
 </html>
