--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Bynder media selector</title>
     <!-- Kontent Styling -->
-    <link rel="stylesheet" type="text/css" href="https://kentico.github.io/kontent-custom-element-samples/shared/custom-element-v2.css">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/kontent-ai-app-styles.css">
     <!-- Kentico Custom elements API-->
     <script src="https://app.kontent.ai/js-api/custom-element/v1/custom-element.min.js"></script>
     <script src="https://ucv.bynder.com/5.0.5/modules/compactview/bynder-compactview-3-latest.js"></script>
