--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>Bynder media selector</title>
-    <!-- Kontent Styling -->
+    <!-- Kontent.ai Styling -->
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/kontent-ai-app-styles.css">
-    <!-- Kentico Custom elements API-->
+    <!-- Kontent.ai Custom elements API-->
     <script src="https://app.kontent.ai/js-api/custom-element/v1/custom-element.min.js"></script>
     <script src="https://ucv.bynder.com/5.0.5/modules/compactview/bynder-compactview-3-latest.js"></script>
   </head>
